# BS2_A1_Vorlage

./: CMakeLists.txt  chat.c  chat.h  chat_server_poll.c  chat_server_poll.h  chat_server_threads.cpp  chat_server_threads.h  error_reporting.c  error_reporting.h  software_information.h  tcp_socket.c  tcp_socket.h
client/: chat
